--- a/src/app/components/forms/user-profile-form/user-profile-form.component.html
+++ b/src/app/components/forms/user-profile-form/user-profile-form.component.html
@@ -45,6 +45,15 @@
     label="ایجاد رمز عبور جدید"
     styleClass="my-2 md:my-0 text-xs md:text-sm lg:text-base w-full md:w-36 lg:w-40"
   ></app-button>
+
+  <app-button
+    class="block lg:hidden"
+    (click)="logout()"
+    [disabled]="loading() || !userProfile()"
+    label="خروج"
+    severity="danger"
+    styleClass="my-2 md:my-0 text-xs md:text-sm lg:text-base w-full md:w-36 lg:w-40"
+  ></app-button>
 </div>
 
 <!-- Confirm dialog -->
