style(wallet-transaction-table):imporve style and change color maping rows handle dark mode too

--- a/src/app/components/forms/shared/wallet-transactions-table/wallet-transactions-table.component.html
+++ b/src/app/components/forms/shared/wallet-transactions-table/wallet-transactions-table.component.html
@@ -1,6 +1,12 @@
 <p-table
   [value]="transactions()"
   [responsiveLayout]="'scroll'"
+    [tableStyle]="tableUi.tableStyle"
+  [paginator]="tableUi.paginator"
+  [paginatorLocale]="tableUi.paginatorLocale"
+  [rows]="tableUi.rows"
+  [rowsPerPageOptions]="tableUi.rowsPerPageOptions"
+  [stripedRows]="tableUi.stripedRows"
   >
   <ng-template pTemplate="header">
     <tr>
