--- a/src/app/components/forms/tariffs-manages-form/tariffs-form.component.html
+++ b/src/app/components/forms/tariffs-manages-form/tariffs-form.component.html
@@ -14,7 +14,7 @@
     (valueChange)="onAutoCompleteChange(searchLoaderTypeId)"
     [lazySearch]="onSearchLoaderType"
     [showIconOptionSelected]="searchLoaderTypeId.value !== 0"
-    [addonWidth]="widthAddon"
+    [addonWidth]="addonWidth"
   />
 
   <app-search-auto-complete
@@ -28,7 +28,7 @@
     (valueChange)="onAutoCompleteChange(searchSourceCityId)"
     [lazySearch]="onSearchCity"
     [showIconOptionSelected]="searchSourceCityId.value !== 0"
-    [addonWidth]="widthAddon"
+    [addonWidth]="addonWidth"
   />
 
   <app-search-auto-complete
@@ -42,7 +42,7 @@
     (valueChange)="onAutoCompleteChange(searchTargetCityId)"
     [lazySearch]="onSearchCity"
     [showIconOptionSelected]="searchTargetCityId.value !== 0"
-    [addonWidth]="widthAddon"
+    [addonWidth]="addonWidth"
   />
 
   <app-search-auto-complete
@@ -56,7 +56,7 @@
     (valueChange)="onAutoCompleteChange(searchGoodsId)"
     [lazySearch]="onSearchProduct"
     [showIconOptionSelected]="searchGoodsId.value !== 0"
-    [addonWidth]="widthAddon"
+    [addonWidth]="addonWidth"
   />
 
   <div class="col-span-12 flex justify-end">
@@ -71,76 +71,12 @@
   </div>
 </form>
 
-<!-- 📊 Tariff Table -->
-<p-table
-  class="col-span-12 overflow-x-auto"
-  [columns]="cols"
-  [value]="tariffs"
-  [tableStyle]="{ 'min-width': '50rem' }"
->
-  <ng-template #caption>
-    <div class="flex justify-between items-center">
-      <app-button
-        label="جدید"
-        size="small"
-        styleClass="px-6 md:px-8 py-1"
-        (click)="onNew()"
-      />
-    </div>
-  </ng-template>
-
-  <ng-template #header let-columns>
-    <tr>
-      @for (col of columns; track $index) {
-      <th>{{ col }}</th>
-      }
-    </tr>
-  </ng-template>
-
-  <ng-template #body let-rowData>
-    <tr>
-      <td>
-        <app-button
-          icon="pi pi-pencil"
-          severity="info"
-          variant="text"
-          [disabled]="loading"
-          (click)="onEdit(rowData)"
-        />
-      </td>
-      <td>
-        <app-button
-          icon="pi pi-trash"
-          severity="danger"
-          variant="text"
-          [disabled]="loading"
-          (click)="onDelete(rowData)"
-        />
-      </td>
-      <td>{{ rowData.LoaderTypeId }}</td>
-      <td>{{ rowData.LoaderTypeTitle }}</td>
-      <td>{{ rowData.GoodId }}</td>
-      <td>{{ rowData.GoodTitle }}</td>
-      <td>{{ rowData.SourceCityId }}</td>
-      <td>{{ rowData.SourceCityTitle }}</td>
-      <td>{{ rowData.TargetCityId }}</td>
-      <td>{{ rowData.TargetCityTitle }}</td>
-      <td>{{ rowData.Tariff }}</td>
-      <td>{{ rowData.BaseTonnag }}</td>
-      <td>{{ rowData.CalculationReference }}</td>
-      <td>
-        <i
-          class="pi"
-          [ngClass]="
-            rowData.Active
-              ? 'pi-check-circle text-green-500'
-              : 'pi-times-circle text-red-500'
-          "
-        ></i>
-      </td>
-    </tr>
-  </ng-template>
-</p-table>
+<app-table
+  [columns]="columns"
+  [rows]="tariffs"
+  [enableCaptionButton]="true"
+  (onClickCaptionButton)="onNew()"
+/>
 
 <!-- 📦 Actions -->
 <div class="flex w-full justify-end gap-4 mt-6">
@@ -162,7 +98,7 @@
   [(visible)]="formDialogVisible"
   [modal]="true"
   [closable]="true"
-  [header]="headerTitle"
+  [header]="headerTitle()"
   [style]="{ width: '30rem', maxWidth: '100%' }"
   (onHide)="closeDialogTariffForm()"
   draggable="false"
@@ -185,7 +121,7 @@
       [showIconOptionSelected]="LoaderTypeId.value !== 0"
       [readOnly]="isTariffsFormReadonly()"
       [disabled]="isTariffsFormReadonly()"
-      [addonWidth]="widthAddon"
+      [addonWidth]="addonWidth"
     />
 
     <app-search-auto-complete
@@ -201,7 +137,7 @@
       [showIconOptionSelected]="SourceCityId.value !== 0"
       [readOnly]="isTariffsFormReadonly()"
       [disabled]="isTariffsFormReadonly()"
-      [addonWidth]="widthAddon"
+      [addonWidth]="addonWidth"
     />
 
     <app-search-auto-complete
@@ -217,7 +153,7 @@
       [showIconOptionSelected]="TargetCityId.value !== 0"
       [readOnly]="isTariffsFormReadonly()"
       [disabled]="isTariffsFormReadonly()"
-      [addonWidth]="widthAddon"
+      [addonWidth]="addonWidth"
     />
 
     <app-search-auto-complete
@@ -233,7 +169,7 @@
       [showIconOptionSelected]="GoodId.value !== 0"
       [readOnly]="isTariffsFormReadonly()"
       [disabled]="isTariffsFormReadonly()"
-      [addonWidth]="widthAddon"
+      [addonWidth]="addonWidth"
     />
 
     <app-text-input
@@ -273,7 +209,7 @@
       <app-button
         label="ثبت تغییرات"
         type="submit"
-        [disabled]="tariffForm.invalid || loading"
+        [disabled]="tariffForm.invalid || loading()"
       />
     </div>
   </form>
