--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,10 @@
 <app-loading />
-<p-toast baseZIndex="100" position="top-center" [showTransformOptions]="'translateY(100%)'"
-  [showTransformOptions]="'translateX(100%)'" styleClass="max-w-95vw" />
+<p-toast
+  baseZIndex="100"
+  position="top-center"
+  [showTransformOptions]="'translateY(100%)'"
+  [showTransformOptions]="'translateX(100%)'"
+  styleClass="max-w-95vw"
+/>
 <router-outlet />
-<app-theme-management hidden/>
+<app-theme-management hidden />
