fix(components/forms)[transport-companies]: update style & logic to add change status

--- a/src/app/components/forms/transport-companies-form/transport-companies-form.component.html
+++ b/src/app/components/forms/transport-companies-form/transport-companies-form.component.html
@@ -96,12 +96,10 @@
     />
 
     <!-- وضعیت -->
-    <app-binary-radio-input
+    <app-toggle-switch-input
       class="col-span-12 flex px-4"
       label="وضعیت"
       [control]="Active"
-      [disabled]="true"
-      [readonly]="true"
     />
   </div>
 
