refactor(search-auto-complete):refactor auto complete and fix related components

--- a/src/app/components/shared/inputs/search-auto-complete/search-auto-complete.component.html
+++ b/src/app/components/shared/inputs/search-auto-complete/search-auto-complete.component.html
@@ -40,7 +40,9 @@
       class="px-2 py-4 cursor-pointer hover:bg-emphasis"
       [ngClass]="{ 'bg-emphasis': hoverIndex() === $index }"
     >
+    @if (optionLabel) {
       {{ suggestion[optionLabel] }}
+    }
     </div>
     } }
   </div>
