--- a/src/app/components/forms/load-capacitor-form/load-capacitor-form.component.html
+++ b/src/app/components/forms/load-capacitor-form/load-capacitor-form.component.html
@@ -1,252 +1,1 @@
-<div class="flex flex-col gap-2">
-  <!-- Loading Spinner -->
-  @if (loading) {
-  <div
-    class="h-full w-full z-50 flex items-center justify-center absolute"
-  >
-    <div class="h-full w-full" style="opacity: 0.2"></div>
-    <i class="pi pi-spin pi-spinner primary" style="font-size: 5rem"></i>
-  </div>
-  }
-
-  <!-- Search Form -->
-  <form
-    class="col-span-12"
-    [formGroup]="searchForm"
-    [class.pointer-events-none]="loading"
-    [class.opacity-60]="loading"
-    (ngSubmit)="loadCapacitorForm()"
-  >
-    <div class="flex gap-4">
-      <app-text-input
-        [control]="barcode"
-        icon="pi pi-barcode"
-        class="flex-1"
-        placeholder="کد بار"
-        addonWidth="5rem"
-      />
-      <app-button
-        (click)="loadCapacitorForm()"
-        [disabled]="searchForm.invalid"
-        size="small"
-        severity="info"
-        styleClass="w-32 h-2-5rem"
-        label="جستجو"
-      />
-    </div>
-  </form>
-
-  <!-- Capacitor Form -->
-  <form
-    class="grid grid-cols-12 gap-4 col-span-12"
-    [formGroup]="capacitorForm"
-    [class.pointer-events-none]="loading"
-    [class.opacity-60]="loading"
-    [formGroup]="capacitorForm"
-    (ngSubmit)="editOrRegister()"
-  >
-    <div class="grid grid-cols-12 gap-4 col-span-12 border-gray-400 border-b-2">
-      <app-date-picker-input
-        class="col-span-12 sm:col-span-6"
-        [addonWidth]="addonWidth"
-        label="تاریخ ثبت بار"
-        type="date"
-        [control]="announceDate"
-        validationField="announceDate"
-      />
-
-      <app-text-input hidden [control]="loadStatusId" />
-      <app-text-input
-        class="col-span-12 sm:col-span-6"
-        [addonWidth]="addonWidth"
-        label="وضعیت بار"
-        [control]="loadStatusTitle"
-        validationField="loadStatus"
-      />
-    </div>
-
-    <div class="grid grid-cols-12 gap-4 col-span-12 mt-4 border-gray-400 border-b-2">
-      <app-text-input hidden [control]="transportCompanyId" />
-
-      <app-text-input
-        class="col-span-12 sm:col-span-6 md:col-span-4"
-        [addonWidth]="addonWidth"
-        label="شرکت حمل و نقل"
-        [control]="transportCompanyTitle"
-        validationField="transportCompany"
-      />
-
-      <app-text-input hidden [control]="goodId" />
-      <app-text-input
-        class="col-span-12 sm:col-span-6 md:col-span-4"
-        [addonWidth]="addonWidth"
-        label=" کالا"
-        [control]="goodTitle"
-        validationField="good"
-      />
-
-      <app-text-input hidden [control]="loadAnnouncementGroupId" />
-      <app-text-input
-        class="col-span-12 sm:col-span-6 md:col-span-4"
-        [addonWidth]="addonWidth"
-        label="گروه اعلام بار"
-        [control]="loadAnnouncementGroupTitle"
-        validationField="loadAnnouncementGroup"
-      />
-
-      <app-text-input hidden [control]="loadAnnouncementSubGroupId" />
-      <app-text-input
-        class="col-span-12 sm:col-span-6 md:col-span-4"
-        [addonWidth]="addonWidth"
-        label="زیرگروه اعلام بار"
-        [control]="loadAnnouncementSubGroupTitle"
-        validationField="loadAnnouncementSubGroup"
-      />
-    </div>
-
-    <div class="grid grid-cols-12 gap-4 col-span-12 mt-4 border-gray-400 border-b-2">
-      <app-text-input hidden [control]="sourceCityId" />
-      <app-text-input
-        class="col-span-12 sm:col-span-6 md:col-span-4"
-        [addonWidth]="addonWidth"
-        label="شهر مبدا"
-        [control]="sourceCityTitle"
-        validationField="sourceCity"
-      />
-
-      <app-text-input hidden [control]="targetCityId" />
-      <app-text-input
-        class="col-span-12 sm:col-span-6 md:col-span-4"
-        [addonWidth]="addonWidth"
-        label="شهر مقصد"
-        [control]="targetCityTitle"
-        validationField="targetCity"
-      />
-
-      <app-text-input hidden [control]="loadingPlaceId" />
-      <app-text-input
-        class="col-span-12 sm:col-span-6 md:col-span-4"
-        [addonWidth]="addonWidth"
-        label="مبدا بارگیری"
-        [control]="loadingPlaceTitle"
-        validationField="loadingPlace"
-      />
-
-      <app-text-input hidden [control]="dischargingPlaceId" />
-      <app-text-input
-        class="col-span-12 sm:col-span-6 md:col-span-4"
-        [addonWidth]="addonWidth"
-        label="مقصد تخلیه"
-        [control]="dischargingPlaceTitle"
-        validationField="dischargingPlace"
-      />
-    </div>
-
-    <div class="grid grid-cols-12 gap-4 col-span-12 mt-4 border-gray-400 border-b-2">
-      <app-text-input
-        class="col-span-12 sm:col-span-6 md:col-span-4"
-        [addonWidth]="addonWidth"
-        label="تعداد کل"
-        [control]="totalNumber"
-        validationField="totalNumber"
-      />
-      <app-text-input
-        class="col-span-12 sm:col-span-6 md:col-span-4"
-        [addonWidth]="addonWidth"
-        label="تناژ"
-        [control]="tonaj"
-        validationField="tonaj"
-      />
-      <app-text-input
-        class="col-span-12 sm:col-span-6 md:col-span-4"
-        [addonWidth]="addonWidth"
-        label="گیرنده"
-        [control]="recipient"
-        validationField="recipient"
-      />
-      <app-text-input
-        class="col-span-12 sm:col-span-6 md:col-span-4"
-        [addonWidth]="addonWidth"
-        label="تعرفه"
-        [control]="tarrif"
-        validationField="tariff"
-      />
-    </div>
-
-    <div class="grid grid-cols-12 gap-4 col-span-12 mt-4 border-gray-400 border-b-2">
-      <app-text-input
-        class="col-span-12"
-        [addonWidth]="addonWidth"
-        label="آدرس"
-        [control]="address"
-        validationField="address"
-      />
-      <app-text-input
-        class="col-span-12"
-        [addonWidth]="addonWidth"
-        label="توضیحات"
-        [control]="description"
-        validationField="description"
-      />
-    </div>
-
-    <span class="mt-2 font-bold text-xl">پارامترهای موثر</span>
-    <p-table
-    class="col-span-12"
-    [value]="this.ptpFormArray.controls"
-      styleClass="overflow-x-auto"
-      [tableStyle]="{ 'min-width': '40rem' }"
-    >
-      <ng-template #body let-control>
-        <tr>
-          <td>
-            <!-- Checkbox + ID -->
-            <div class="flex items-center gap-2" style="width: 5rem">
-              <p-checkbox
-                [binary]="true"
-                class="mb-1"
-                [formControl]="control.get('Checked')"
-              ></p-checkbox>
-              <span class="mt-1">{{ control.get("TPTPDId")?.value }}</span>
-            </div>
-          </td>
-          <td>{{ control.get("TPTPTitle")?.value }}</td>
-          <td>
-            {{ control.get("Cost")?.value | number : "1.0-0" }}
-          </td>
-        </tr>
-      </ng-template>
-    </p-table>
-
-    <!-- Action Buttons -->
-    <div
-      class="px-4 col-span-12 md:flex md:flex-row-reverse md:flex-wrap gap-4 items-center"
-    >
-      <app-button
-        (click)="editOrRegister()"
-        [disabled]="capacitorForm.invalid || loading"
-        label="ثبت و ویرایش"
-        size="small"
-        styleClass="my-2 md:my-0 text-xs md:text-sm lg:text-base w-full md:w-36 lg:w-40"
-      ></app-button>
-
-      <app-button
-        (click)="editOrRegister()"
-        [disabled]="capacitorForm.invalid || loading"
-        label="حذف بار"
-        size="small"
-        severity="danger"
-        styleClass="my-2 md:my-0 text-xs md:text-sm lg:text-base w-full md:w-36 lg:w-40"
-      ></app-button>
-
-      <app-button
-        (click)="editOrRegister()"
-        [disabled]="capacitorForm.invalid || loading"
-        label="کنسلی بار"
-        size="small"
-        severity="info"
-        styleClass="my-2 md:my-0 text-xs md:text-sm lg:text-base w-full md:w-36 lg:w-40"
-      ></app-button>
-    </div>
-  </form>
-</div>
+<p>load-capacitor-form works!</p>
