refactor(app/pages/auth)[login-page.*]: Update component style
The page doesn't work properly well on small screen devices, so I update
it.

--- a/src/app/pages/auth/login-page/login-page.component.html
+++ b/src/app/pages/auth/login-page/login-page.component.html
@@ -1,9 +1,10 @@
 <app-full-screen-background />
 
 
-<div class="flex items-center mx-6 justify-center md:justify-end md:ml-16 min-h-screen">
- <app-form-card class="w-full max-w-[500px] min-w-[280px]">
+<div class="flex items-center justify-center md:justify-end pt-5 sm:mt-0 md:ml-16 min-h-screen">
+ <app-form-card class="w-full p-0 h-full max-w-[500px] min-w-[280px] mx-4 lg:mx-0">
    <app-login-form />
  </app-form-card>
 </div>
 
+<app-support-button/>
