refactor(app/pages/dashboard)[dashboard]: Update support button style

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -21,7 +21,7 @@
     </section>
   </main>
 
-  <app-support-button></app-support-button>
+  <app-support-button class="hidden lg:block"></app-support-button>
 
   <!-- Footer -->
   <footer [class]="layoutUi.headerHeight" class="shrink-0 overflow-hidden">
