fix(app/components/shared)[full-screen-background.*]: update code due to `Eslint` errors

--- a/src/app/components/shared/full-screen-background/full-screen-background.component.html
+++ b/src/app/components/shared/full-screen-background/full-screen-background.component.html
@@ -12,7 +12,7 @@
 
 <!-- mobile screen -->
 <div
-  class="lg:hidden fixed w-full h-full"
+  class="lg:hidden fixed w-full h-screen"
   [ngStyle]="{
     'background-image': 'url(' + imageUrl + ')',
     'background-size': backgroundSize,
