--- a/src/app/components/shared/layout/mobile-tab-bar/mobile-tab-bar.component.html
+++ b/src/app/components/shared/layout/mobile-tab-bar/mobile-tab-bar.component.html
@@ -2,36 +2,36 @@
   class="fixed flex justify-center items-center -translate-x-1/2 left-1/2 bottom-0 w-full h-22"
 >
   <div
-    class="w-full h-full flex justify-around items-center bg-primary-emphasis text-primary-contrast"
+    class="w-full h-full flex justify-around items-center bg-primary-emphasis text-primary-contrast rounded-t-3xl"
   >
     @for (tab of tabs(); track $index) {
-    <div
-      (click)="onClickTab(tab)"
-      class="flex flex-col items-center transition-all duration-500 ease-in-out pt-2"
-      [ngClass]="{
+      <div
+        (click)="onClickTab(tab)"
+        class="flex flex-col items-center transition-all duration-500 ease-in-out pt-2"
+        [ngClass]="{
           'gap-5 -translate-y-2': isTabActive(tab),
           'gap-2': !isTabActive(tab),
         }"
-    >
-      <button
-        pButton
-        [icon]="`pi ${tab.icon}`"
-        [rounded]="true"
-        [severity]="isTabActive(tab) ? 'info' : 'secondary'"
-        class="transition-transform duration-500 ease-in-out"
-        [ngClass]="{
-          'scale-170 sm:scale-180 bg-primary-400 border-2 border-primary-emphasis':
-            isTabActive(tab),
-          'scale-120 sm:scale-130 bg-secondary': !isTabActive(tab)
-        }"
-      ></button>
-      <span
-        class="text-sm transition-colors duration-300 ease-in-out"
-        [ngClass]="{ 'font-bold text-2xl': isTabActive(tab) }"
       >
-        {{ tab.title }}
-      </span>
-    </div>
+        <button
+          pButton
+          [icon]="`pi ${tab.icon}`"
+          [rounded]="true"
+          [severity]="isTabActive(tab) ? 'info' : 'secondary'"
+          class="transition-transform duration-500 ease-in-out"
+          [ngClass]="{
+            'scale-170 sm:scale-180 bg-primary-400 border-2 border-primary-emphasis':
+              isTabActive(tab),
+            'scale-120 sm:scale-130 bg-secondary': !isTabActive(tab),
+          }"
+        ></button>
+        <span
+          class="text-sm transition-colors duration-300 ease-in-out"
+          [ngClass]="{ 'font-bold text-2xl': isTabActive(tab) }"
+        >
+          {{ tab.title }}
+        </span>
+      </div>
     }
   </div>
 </div>
