--- a/src/app/components/shared/layout/sidebar/search-processes/search-processes.component.html
+++ b/src/app/components/shared/layout/sidebar/search-processes/search-processes.component.html
@@ -8,7 +8,7 @@
 </div>
 
 <p-button
-  (onClick)="isDialogVisible = true"
+  (onClick)="openSearchProcess()"
   [icon]="'pi pi-search'"
   styleClass="text-black"
   severity="info"
@@ -18,6 +18,7 @@
 ></p-button>
 
 <p-dialog
+  id="searchDialog"
   draggable="false"
   [header]="headerTitle()"
   [modal]="true"
