--- a/src/app/components/shared/layout/sidebar/sidebar/sidebar.component.html
+++ b/src/app/components/shared/layout/sidebar/sidebar/sidebar.component.html
@@ -8,11 +8,17 @@
     (onHide)="onDrawerClose()"
     [visible]="(isOpen$ | async) ?? false"
     position="right"
+    class="rounded-full"
+    styleClass="rounded-l-4xl border-l-3 border-y-3 shadow-[0px_0px_15px_rgba(0,0,0,1)] border-primary-emphasis"
   >
     <div
       dir="rtl"
       class="flex flex-col justify-between w-full h-full rounded-none"
     >
+      <div class="flex absolute top-5 left-3 justify-center items-center gap-2">
+        <app-search-processes class="lg:hidden" />
+        <app-theme-management />
+      </div>
       <app-sidebar-page-group [pageGroupItems]="pageGroupItems" />
       <div class="flex flex-col items-center">
         <app-logo />
@@ -20,20 +26,19 @@
     </div>
   </p-drawer>
 } @else {
-<!-- Sidebar -->
-<div class="h-full w-full pl-2" dir="ltr">
-  <div
-    dir="ltr"
-    class="flex flex-col justify-between w-full h-full overflow-auto rounded-none shadow-lg dark:shadow-gray-700"
-  >
-    <div>
-      <app-search-processes dir="rtl" />
-      <app-sidebar-page-group [pageGroupItems]="pageGroupItems" dir="rtl" />
-    </div>
-    <div dir="rtl">
-      <app-logo />
+  <!-- Sidebar -->
+  <div class="h-full w-full rounded-l-xl shadow-[0px_0px_5px_rgba(0,0,0,0.5)]" dir="ltr">
+    <div
+      dir="ltr"
+      class="flex flex-col justify-between w-full h-full overflow-auto rounded-l-xl dark:bg-zinc-800"
+    >
+      <div>
+        <app-search-processes dir="rtl" />
+        <app-sidebar-page-group [pageGroupItems]="pageGroupItems" dir="rtl" />
+      </div>
+      <div dir="rtl">
+        <app-logo />
+      </div>
     </div>
   </div>
-  
-</div>
 }
