--- a/src/app/components/shared/layout/tab-manager/tab-manager.component.html
+++ b/src/app/components/shared/layout/tab-manager/tab-manager.component.html
@@ -1,12 +1,12 @@
 <div class="overflow-hidden hidden lg:block">
   <div class="overflow-x-auto w-full">
-    <div class="flex flex-nowrap min-w-max border-b border-gray-300">
+    <div class="flex flex-nowrap pr-1 min-w-max border-b border-gray-300">
       @for (tab of tabs.values(); track tab.id) {
       <div class="relative flex items-center h-8">
         <div>
           <div
             (click)="onClickTab(tab)"
-            class="flex gap-2 pl-10 rounded-t-2xl pr-2 py-2 cursor-pointer transition-all ease-in-out duration-300 border-1"
+            class="flex gap-2 pl-7 rounded-t-2xl pr-3 py-2 cursor-pointer transition-all ease-in-out duration-300 border-1"
             [ngClass]="{
               'bg-highlight-emphasis text-shadow-primary-emphasis border-primary font-bold text-sm':
                 selectTab().id === tab.id,
