--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="h-screen flex flex-col">
+<div class="flex flex-col" [style.height]="'100dvh'">
   <!-- Header -->
   <header [style.height]="layoutUi.headerHeight" class="shrink-0">
     <app-header />
