--- a/src/app/components/shared/inputs/text-input/text-input.component.html
+++ b/src/app/components/shared/inputs/text-input/text-input.component.html
@@ -40,6 +40,7 @@
       }"
       (focus)="onFocusInput(inputRef)"
       (blur)="onBlurInput(inputRef)"
+      (input)="valueChange($event)"
     />
 
     @if (buttonIcon.trim() !== '') {
