fix(tab-manager):fix sub tabs not scroll

--- a/src/app/components/shared/layout/tab-manager/tab-manager.component.html
+++ b/src/app/components/shared/layout/tab-manager/tab-manager.component.html
@@ -40,7 +40,7 @@
   (valueChange)="onSubTabChange($event)"
 >
   <div class="w-full overflow-x-auto" #tabContent>
-    <p-tablist>
+    <p-tablist class="w-full overflow-x-auto">
       @for (view of selectTab().config.subTab; track $index) {
        <p-tab class="text-sm" [value]="$index">{{ view.title }}</p-tab>
       }
