style(dashboard-content-manager):add h-full dashboard-content-manager

--- a/src/app/components/shared/layout/dashboard-content-manager/dashboard-content-manager.component.html
+++ b/src/app/components/shared/layout/dashboard-content-manager/dashboard-content-manager.component.html
@@ -1,6 +1,9 @@
-<div class="px-8 py-8">
-  <app-sidebar-web-processes [hidden]="!subMenuVisible" [processes]="webProcesses" />
-  <div [hidden]="subMenuVisible">
+<div class="px-8 py-8 h-full">
+  <app-sidebar-web-processes
+    [hidden]="!subMenuVisible"
+    [processes]="webProcesses"
+  />
+  <div [hidden]="subMenuVisible" class="h-full">
     <ng-container #tabContent></ng-container>
   </div>
 </div>
