fix(search-auto-complete): use input event instead of control.valueChanges to trigger valueChange only on user typing

--- a/src/app/components/shared/inputs/search-auto-complete/search-auto-complete.component.html
+++ b/src/app/components/shared/inputs/search-auto-complete/search-auto-complete.component.html
@@ -16,7 +16,8 @@
       [control]="control"
       (keydown)="onKeydown($event)"
       (focus)="onFocusInput($event)"
-    />
+      (input)="valueInputChange($event)"
+ />
   </div>
 
   <div
